[project]
name = "harish-rag-multimodal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "langchain>=1.0.7",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "notebook>=7.4.7",
    "python-dotenv>=1.2.1",
    "unstructured[all-docs]>=0.18.21",
]
